# agency-runtime-quickstart

./: .replit  LICENSE  README.md  addr.sqlite  agency-runtime.py  pyproject.toml  replit.nix  start-agent-teams.py
agentgarage/: quickquick.py
agentgarage/template/: bare.py  loadtime.py  runtime.py
apps/: bare.py  quickquick.py  universal.py
contract/AgentFactory/: abi.json
contract/OpoFactory/: abi.json
core/: agent.py
specification/json/: agency_spec.json  mermaidtojson.json  niftyquick.json  quickquick.json
specification/mermaid/: quickquick.mermaid  quickquick.mmd
web/: server.py
