[tool.poetry]
name = "agency-runtime-quickstart"
version = "0.1.0"
description = ""
authors = ["Bill Gleim <bill@configsecret.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.3.2"
langchain = "^0.1.16"
flask = "^3.0.2"
waitress = "3.0.0"
langgraph = "0.0.39"
securedb = "2.0.2"
cryptography = "42.0.5"
openai = "1.24.1"
langchain-openai = "0.1.4"
pickledb = "^0.9.2"
web3 = "^6.20.2"
sqlitedict = "^2.1.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
